XP-4482 Content Wizard toolbar - Fix menu overflow and alignment of the help-text icon
Fixed navigator steps check for `minimize` status.

--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-panel.less
@@ -13,7 +13,7 @@
 
     .wizard-step-navigator-and-toolbar.pre-scroll-stick {
       .help-text-button {
-        margin-right: 41px;
+        margin: 0 41px 0 0;
       }
     }
   }
