--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator-and-toolbar.less
@@ -120,7 +120,9 @@
     justify-content: center;
     width: 30px;
     height: 40px;
-    margin-right: 7px;
+    // margin left 34px is needed for calculations in js
+    // total width with margin should always be the same
+    margin: 0 7px 0 34px;
     float: right;
     vertical-align: top;
     overflow: hidden;
