--- a/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
+++ b/modules/admin/admin-ui/src/main/resources/web/admin/common/styles/api/app/wizard/wizard-step-navigator.less
@@ -1,6 +1,6 @@
 .wizard-step-navigator {
   width: calc(~'100% - 72px');
-  max-width: 635px;
+  max-width: 675px;
   display: inline-block;
   background-color: @admin-bg-light-gray;
   color: @admin-font-gray1;
